fix: posts working

--- a/src/posts/Github/2018-03-05-Github.md
+++ b/src/posts/Github/2018-03-05-Github.md
@@ -1,11 +1,12 @@
 ---
-title:  "github"
+title:  "dotfiles"
+tags: ["web", "linux"]
 ---
 
+I've decided to share my `dotfiles` online, like many others. What is unique here, however, is the implementation details. 
 
-While I don’t have much on my github page yet, like I’ve mentioned here previously – I’m contemplating uploading all my “dotfiles”.
+Instead of symlinking the dotfiles out of the repo directory to its correct location, I've found a great solution from the [Atlassian Blog](https://www.atlassian.com/git/tutorials/dotfiles) which uses Git Bare Repos.
 
-Until then though I’d like to share what I have so far. The code for my landing page, my most useful custom scripts, and some .bashrc stuff.
-<br><br>
-[https://github.com/ndom91](https://github.com/ndom91)<br>
-[https://scripts.iamnico.xyz](https://scripts.iamnico.xyz)<br>
+Git bare repos were something I was not previously familiar with, but in this case it allows us to use our home directory (`/home/ndo`) as the git repo directory without committing the entire thing, etc.
+
+Source: [ndom91/dotfiles](https://github.com/ndom91/dotfiles)
