--- a/src/posts/pipes/2018-02-22-pipes.md
+++ b/src/posts/pipes/2018-02-22-pipes.md
@@ -1,5 +1,6 @@
 ---
 title:  "pipes >> /dev/null 2>&1"
+tags: ["servers", "linux"]
 ---
 
 Okay so everyone knows that there are a ton of different ways to pipes
