fix: updated post -> markdown

--- a/src/posts/bashrc-aliases/2018-02-22-.bashrc-aliases.md
+++ b/src/posts/bashrc-aliases/2018-02-22-.bashrc-aliases.md
@@ -11,27 +11,27 @@ So first of all, here’s my bash prompt (PS1):
 
 <img src="../assets/img/bashprompt1.png" class="imgshadow">
 
-<div class="codeblok"> 
+```bash
 PS1="\n\[\e[30;1m\]\[\016\]$\[\017\](\[\e[34;1m\]\u@\h\[\e[30;1m\])-(\[\e[37;1m\]\w\[\e[30;1m\])-(\[\e[34;1m\]\@ \d\[\e[30;1m\])->\[\e[30;1m\]\n\[\016\]$\[\017\](\[\e[37;1m\]jobs:\j\[\e[30;1m\])-(\[\e[32;1m\]\$(/bin/ls -1 | /usr/bin/wc -l | /bin/sed 's: ::g') files, \$(/bin/ls -lah | /bin/grep -m 1 total | /bin/sed 's/total //')b\[\e[30;1m\])-> \[\e[0m\]"
- </div>
+```
 
 Nevertheless here are a few shortcuts and aliases I’ve collected that I really enjoy using:
 
 Largest folders and sub folders:
 
-<div class="codeblok"> 
+```bash
 du -Sh | sort -rh | head -5
- </div>
+``` 
 
 Largest files:
 
-<div class="codeblok"> 
+```bash
 find -type f -exec du -Sh {} + | sort -rh | head -n 5
- </div>
+```
 
 other .bashrc aliases I use:
 
-<div class="codeblok"> 
+```bash
 # some more ls aliases
 alias ll='ls -halF --color=auto'
 alias li='ls -laXh --group-directories-first --color=auto'
@@ -70,15 +70,17 @@ alias topfolders='sudo du -hs * | sort -rh | head -5'
 alias topfiles='sudo find -type f -exec du -Sh {} + | sort -rh | head -n 5'
 
 alias emptytash='rm -rf ~/.local/share/Trash/*'
- </div>
+```
 
 A more advanced use for .bashrc aliases I’ve found out about lately which I’ve begun implementing, is to simply roll with your typos. If you find yourself making the same typo over and over, forget correcting your mistake if you cant get a hang of it. Simply add the mistake to .bashrc and dont ever worry about it again. For example:
 
 If you often find yourself typing sduo instead of sudo, this alias is your friend..
 
-<div class="codeblok"> 
+```bash
 alias sduo='sudo'
- </div>
+alias suod='sudo'
+alias sdou='sudo'
+```
 
 So as you can see aliases are a great way to increase your bash proficiency.
 
