--- a/src/posts/pipes/2018-02-22-pipes.md
+++ b/src/posts/pipes/2018-02-22-pipes.md
@@ -8,6 +8,8 @@ output from one process to the next. Only StdOut, without StdErr, with StdErr,
 do you overwrite the existing file or append it?
 
 This quick cheatsheat keeps me on my toes when piping!
+
+```html
 <style>
 table {
     border-collapse: collapse;
@@ -18,10 +20,11 @@ tr,td {
   padding: 10px;
 }
 </style>
-
+```
 
 Good overview of pipe variations:
 
+```
 | | visible in| terminal  |  visible| in file  | existing file
 ---|---|---|---|---|---
   Syntax  |  StdOut  |  StdErr  |  StdOut  |  StdErr  |      
@@ -43,7 +46,6 @@ Good overview of pipe variations:
  ---|---|---|---|---|---
 |& tee    |   yes   |   yes   |   yes    |   yes   | overwrite
 |& tee -a |   yes   |   yes   |   yes    |   yes   |  append
-
-
+```
 
 ![pipe example](../assets/img/pipes-02.png)
