--- a/src/posts/logwatch/2018-02-21-logwatch.md
+++ b/src/posts/logwatch/2018-02-21-logwatch.md
@@ -10,23 +10,23 @@ I have it send me a daily summary of my log files every morning, I usually brows
 Great way to get your day started, reading through log reports 
 Anyway, you can install it from the ubuntu repos directly, so this will do:
 
-<div class="codeblok"> 
+```bash
 sudo apt-get install logwatch
- </div>
+```
 
 After it is installed it will automatically set itself to run daily via your cron.daily folder.
 
 Let’s take a look at this file:
 
-<div class="codeblok"> 
+```bash
 sudo nano /etc/cron.daily/00logwatch
- </div>
+```
 
 As you can see its not super complicated. Theres a line testing to see if logwatch is still there and then the line executing the “watch” and sending the results. I usually set my <code>“MAILTO”</code>  here directly by changing the line to:
 
-<div class="codeblok"> 
+```bash
 /usr/bin/logwatch --output mail --mailto [my e-mail address]
- </div>
+```
 
 You can change when the daily cron scripts run by editing /etc/crontab
 
@@ -36,11 +36,11 @@ Logwatch processes <code>/usr/share/logwatch/dist.conf/logwatch.conf</code> afte
 
 Inside the hidden <code>/usr/share/logwatch/dist.conf/logwatch.conf</code>  are three vital config lines:
 
-<div class="codeblok"> 
+```bash
 mailer = "/usr/sbin/sendmail -t"
 TmpDir = /tmp
 MailFrom = root
- </div>
+```
 
 My mails kept getting dropped from my mailhub because they were being sent from <code>“root@mydomain.com”</code> instead of the address I had set in the --mailto argument above. So frustrating! After finding this tip though logwatch was set and ready to go.
 
