--- a/src/posts/pispeed/2018-04-06-pispeed.md
+++ b/src/posts/pispeed/2018-04-06-pispeed.md
@@ -26,7 +26,7 @@ Retropie as a college graduation gift for my little brother
 (I know, I know, I'm a great brother, thanks :)). The second Pi,
 192.168.178.61 is running MagicMirror.  
 
-  
+```bash  
 $(ndo@ndo3)-(~)-(11:20  Di Apr 03)->
 $(jobs:0)-(32 files, 236Mb)-> iperf -s
 ------------------------------------------------------------
@@ -50,8 +50,7 @@ TCP window size: 85.3 KByte (default)
 [  4]  0.0-10.1 sec  45.3 MBytes  37.7 Mbits/sec
 [  4] local 192.168.178.92 port 5001 connected with 192.168.178.61 port 33810
 [  4]  0.0-10.1 sec  43.8 MBytes  36.3 Mbits/sec
-
- 
+```
 
 So my Retropie install was experiencing a **3x** reduction in speed!
 
