--- a/src/posts/tripwire/2018-02-24-tripwire.md
+++ b/src/posts/tripwire/2018-02-24-tripwire.md
@@ -9,8 +9,8 @@ Here’s a great little program to keep an eye on your system files to make sure
 
 After it runs, simply type:
 
-<div class="codeblok"> 
+```bash
 sudo /usr/sbin/tripwire --update --twrfile /var/lib/tripwire/report/[name].twr
- </div>
+```
 
 It will open up the report in a text editor with an [x] next to each file. Remove that X if you think the file was illegitimately changed. If all is good, leave the X’s in place and save the file. Then enter your local password and the tripwire database is updated!
