fix: updated formatting on old posts

--- a/src/posts/pispeed/2018-04-06-pispeed.md
+++ b/src/posts/pispeed/2018-04-06-pispeed.md
@@ -57,4 +57,4 @@ So my Retropie install was experiencing a **3x** reduction in speed!
 I experimented a bit to try to get to the bottom of it, but I didnt have the
 time or the motivation to freshly install the OS, try a new SD Card, etc.
 
-Fairyl significant difference, though, huh?!
+Fairly significant difference, though, huh?!
