fix: checklists typo

--- a/src/posts/retropie/2018-04-06-retropie.md
+++ b/src/posts/retropie/2018-04-06-retropie.md
@@ -4,11 +4,11 @@ tags: ["raspberry pi", "side project", "linux"]
 ---
 
 ### Shopping
-[x] [Raspberry Pi 3 B](https://www.conrad.de/de/raspberry-pi-3-model-b-1-gb-ohne-betriebssystem-1668026.html) - [1 x €37,99]
-[x] [2x QUMOX](https://www.amazon.de/gp/product/B00PL271Y0/ref=oh_aui_detailpage_o01_s00?ie=UTF8&psc=1) - [€11,26]
-[x] 64gb microSD C10 - From Downstairs [€0,00]
-[x] [Netzteil](https://www.conrad.de/de/raspberry-pi-netzteil-schwarz-sp-5c-raspberry-pi-3-b-micro-usb-5-vdc-2500-ma-1462834.html) [1 x €9,99]
-[x] [NESPi Case](https://www.amazon.de/gp/product/B076BJBLZD/ref=oh_aui_detailpage_o00_s00?ie=UTF8&psc=1) [1 x €16,99]
+- [x] [Raspberry Pi 3 B](https://www.conrad.de/de/raspberry-pi-3-model-b-1-gb-ohne-betriebssystem-1668026.html) - [1 x €37,99]
+- [x] [2x QUMOX](https://www.amazon.de/gp/product/B00PL271Y0/ref=oh_aui_detailpage_o01_s00?ie=UTF8&psc=1) - [€11,26]
+- [x] 64gb microSD C10 - From Downstairs [€0,00]
+- [x] [Netzteil](https://www.conrad.de/de/raspberry-pi-netzteil-schwarz-sp-5c-raspberry-pi-3-b-micro-usb-5-vdc-2500-ma-1462834.html) [1 x €9,99]
+- [x] [NESPi Case](https://www.amazon.de/gp/product/B076BJBLZD/ref=oh_aui_detailpage_o00_s00?ie=UTF8&psc=1) [1 x €16,99]
 
 Total Cost: €96,05
 
