--- a/src/posts/retropie/2018-04-06-retropie.md
+++ b/src/posts/retropie/2018-04-06-retropie.md
@@ -1,12 +1,20 @@
 ---
-title: retropie
+title: Retropie
 tags: ["raspberry pi", "side project", "linux"]
 ---
 
+This is just a copy of my 'to-do list' for the RetroPie Raspberry Pi project.
+
+I created this for my brother as a gift for his university graduation a few years ago. 
+
+The Raspberry Pi 3B+ was powerful enough to emulate everything up to the N64 / PS1. Some titles on those consoles were playable, but it some definitely weren't. 
+
+Seeing as the Raspberry Pi 4 is a pretty hefty upgrade in the performance department, I would guess that it allows you to play most PS1 / N64 games as well. Especially the 4gb RAM variant.
+
 ### Shopping
-- [x] [Raspberry Pi 3 B](https://www.conrad.de/de/raspberry-pi-3-model-b-1-gb-ohne-betriebssystem-1668026.html) - [1 x €37,99]
+- [x] [Raspberry Pi 3B+](https://www.conrad.de/de/raspberry-pi-3-model-b-1-gb-ohne-betriebssystem-1668026.html) - [1 x €37,99]
 - [x] [2x QUMOX](https://www.amazon.de/gp/product/B00PL271Y0/ref=oh_aui_detailpage_o01_s00?ie=UTF8&psc=1) - [€11,26]
-- [x] 64gb microSD C10 - From Downstairs [€0,00]
+- [x] 64gb microSD - Preowned [€0,00]
 - [x] [Netzteil](https://www.conrad.de/de/raspberry-pi-netzteil-schwarz-sp-5c-raspberry-pi-3-b-micro-usb-5-vdc-2500-ma-1462834.html) [1 x €9,99]
 - [x] [NESPi Case](https://www.amazon.de/gp/product/B076BJBLZD/ref=oh_aui_detailpage_o00_s00?ie=UTF8&psc=1) [1 x €16,99]
 
@@ -36,4 +44,5 @@ Total Cost: €96,05
 
 ### Overclock
 
-- RaspPi 3 B+ @ 1.575 GHz + 500MHz GPU - [youtube](https://www.youtube.com/watch?v=aT0OX8TXRCM)
+- RaspPi 3 B+ @ 1.575 GHz + 500MHz GPU 
+@[youtube](aT0OX8TXRCM)
