fix: more post cleanup

--- a/src/posts/bashrc-aliases/2018-02-22-.bashrc-aliases.md
+++ b/src/posts/bashrc-aliases/2018-02-22-.bashrc-aliases.md
@@ -1,5 +1,5 @@
 ---
-title:  ".bashrc aliases"
+title:  ".bashrc_aliases"
 tags: ["linux", "servers"]
 ---
 
@@ -9,7 +9,7 @@ Hi All,
 So I’m contemplating putting up my dotfiles to github like many others, but mine really aren’t that complex, unmanageable, or interesting yet imo.
 So first of all, here’s my bash prompt (PS1):
 
-<img src="../assets/img/bashprompt1.png" class="imgshadow">
+![Bash](bash.png)
 
 ```bash
 PS1="\n\[\e[30;1m\]\[\016\]$\[\017\](\[\e[34;1m\]\u@\h\[\e[30;1m\])-(\[\e[37;1m\]\w\[\e[30;1m\])-(\[\e[34;1m\]\@ \d\[\e[30;1m\])->\[\e[30;1m\]\n\[\016\]$\[\017\](\[\e[37;1m\]jobs:\j\[\e[30;1m\])-(\[\e[32;1m\]\$(/bin/ls -1 | /usr/bin/wc -l | /bin/sed 's: ::g') files, \$(/bin/ls -lah | /bin/grep -m 1 total | /bin/sed 's/total //')b\[\e[30;1m\])-> \[\e[0m\]"
@@ -58,8 +58,8 @@ alias ping='ping -c 5'
 alias apt-get='sudo apt-get'
 alias apt-gety='sudo apt-get --yes'
 
-alias apachereload='sudo /usr/sbin/apachectl -k graceful'
-alias apachetest='sudo /usr/sbin/apachectl -t && /usr/sbin/apachectl -t -D DUMP_VHOSTS'
+alias nginxtest='nginx -t'
+alias nginxreload='nginx -s reload'
 
 alias meminfo='free -m -l -t -h'
 alias df='df -H --output'
@@ -72,9 +72,11 @@ alias topfiles='sudo find -type f -exec du -Sh {} + | sort -rh | head -n 5'
 alias emptytash='rm -rf ~/.local/share/Trash/*'
 ```
 
-A more advanced use for .bashrc aliases I’ve found out about lately which I’ve begun implementing, is to simply roll with your typos. If you find yourself making the same typo over and over, forget correcting your mistake if you cant get a hang of it. Simply add the mistake to .bashrc and dont ever worry about it again. For example:
+I’ve found out about a more advanced use for bash aliases lately, which is to simply roll with your typos. If you find yourself making the same typo over and over, forget fighting against your mistakes if you cant get a hang of it. 
 
-If you often find yourself typing sduo instead of sudo, this alias is your friend..
+Simply add the mistake to `.bashrc` or `.bash_aliases` and dont ever worry about it again. 
+
+For example, if you often find yourself typing `sduo` or something similar, instead of `sudo`, these aliases are your friend:
 
 ```bash
 alias sduo='sudo'
@@ -82,6 +84,7 @@ alias suod='sudo'
 alias sdou='sudo'
 ```
 
-So as you can see aliases are a great way to increase your bash proficiency.
+So as you can see aliases are a great way to increase your bash proficiency and speed.
 
 If you have any other great aliases / .bashrc file tricks – please let me know!
+
