--- a/src/posts/dotfiles/2019-07-13-dotfiles.md
+++ b/src/posts/dotfiles/2019-07-13-dotfiles.md
@@ -1,6 +1,7 @@
 ---
 title:  "dotfiles"
 tags: ["web", "linux"]
+demo: "https://github.com/ndom91/dotfiles"
 ---
 
 I've decided to share my `dotfiles` online, like many others. What is unique here, however, is the implementation details. 
