--- a/src/posts/logwatch/2018-02-21-logwatch.md
+++ b/src/posts/logwatch/2018-02-21-logwatch.md
@@ -1,19 +1,15 @@
 ---
-title:  "logwatch"
+title:  "Logwatch"
 tags: ["servers", "linux"]
 ---
 
-Logwatch is a pretty simple, but essential application in my workflow.
+Logwatch is a pretty simple, but essential application in my server management arsenal.
 
-I have it send me a daily summary of my log files every morning, I usually browse through this in the morning shortly after waking up while I’m still laying in bed waking up.
-
-Great way to get your day started, reading through log reports 
-Anyway, you can install it from the ubuntu repos directly, so this will do:
+You can install it from the ubuntu repos directly, so this will do:
 
 ```bash
 sudo apt-get install logwatch
 ```
-
 After it is installed it will automatically set itself to run daily via your cron.daily folder.
 
 Let’s take a look at this file:
@@ -21,13 +17,11 @@ Let’s take a look at this file:
 ```bash
 sudo nano /etc/cron.daily/00logwatch
 ```
-
 As you can see its not super complicated. Theres a line testing to see if logwatch is still there and then the line executing the “watch” and sending the results. I usually set my <code>“MAILTO”</code>  here directly by changing the line to:
 
 ```bash
 /usr/bin/logwatch --output mail --mailto [my e-mail address]
 ```
-
 You can change when the daily cron scripts run by editing /etc/crontab
 
 This next part is a bit tricky, however. After installation, to get the e-mail alerts working logwatch hides a critical email setting in <code>/usr/share/logwatch/dist.conf/logwatch.conf</code>
@@ -42,6 +36,6 @@ TmpDir = /tmp
 MailFrom = root
 ```
 
-My mails kept getting dropped from my mailhub because they were being sent from <code>“root@mydomain.com”</code> instead of the address I had set in the --mailto argument above. So frustrating! After finding this tip though logwatch was set and ready to go.
+My mails kept getting dropped from my mailhub because they were being sent from <code>“root@mydomain.com”</code> instead of the address I had set in the --mailto argument above. After finding this tip logwatch was set and ready to go.
 
-Make sure to leave it run daily and check out the reports it generates. They are legitimately helpful in diagnosing issues you may not even have known were there, ,or possibly even more nefarious things you may not have known were happening. Who has the time to manually look through a bunch of log files?! Logwatch, thats who! 🙂
+You can obviously have it run less often than 'daily', just be sure to actually check out the reports it generates! There are often high impact, quick fixes in there. 
