--- a/src/posts/pipes/2018-02-22-pipes.md
+++ b/src/posts/pipes/2018-02-22-pipes.md
@@ -1,51 +1,25 @@
 ---
-title:  "pipes >> /dev/null 2>&1"
+title:  "Bash Pipes"
 tags: ["servers", "linux"]
 ---
 
-Okay so everyone knows that there are a ton of different ways to pipes
-output from one process to the next. Only StdOut, without StdErr, with StdErr,
-do you overwrite the existing file or append it?
+This table will hopefully help me keep the pipe madness in check. Am I overwriting or appending? Am I including StdErr? Etc..
 
-This quick cheatsheat keeps me on my toes when piping!
-
-```html
-<style>
-table {
-    border-collapse: collapse;
-}
-tr,td {
-  text-align: center;
-  border: 1px solid #b5e853;
-  padding: 10px;
-}
-</style>
-```
-
-Good overview of pipe variations:
-
-```
 | | visible in| terminal  |  visible| in file  | existing file
----|---|---|---|---|---
-  Syntax  |  StdOut  |  StdErr  |  StdOut  |  StdErr  |      
----|---|---|---|---|---
-    >     |    no   |   yes   |   yes    |    no   | overwrite
-    >>    |    no   |   yes   |   yes    |    no   |  append
-    ---|---|---|---|---|---
-   2>     |   yes   |    no   |    no    |   yes   | overwrite
-   2>>    |   yes   |    no   |    no    |   yes   |  append
-   ---|---|---|---|---|---
-   &>     |    no   |    no   |   yes    |   yes   | overwrite
-   &>>    |    no   |    no   |   yes    |   yes   |  append
-   ---|---|---|---|---|---
- | tee    |   yes   |   yes   |   yes    |    no   | overwrite
- | tee -a |   yes   |   yes   |   yes    |    no   |  append
- ---|---|---|---|---|---
- n.e. (*) |   yes   |   yes   |    no    |   yes   | overwrite
- n.e. (*) |   yes   |   yes   |    no    |   yes   |  append
- ---|---|---|---|---|---
-|& tee    |   yes   |   yes   |   yes    |   yes   | overwrite
-|& tee -a |   yes   |   yes   |   yes    |   yes   |  append
-```
+|---|---|---|---|---|---|
+|  Syntax  |  StdOut  |  StdErr  |  StdOut  |  StdErr  |      
+|---|---|---|---|---|---|
+|     >    |    no   |   yes   |   yes    |    no   | overwrite
+|    >>    |    no   |   yes   |   yes    |    no   |  append
+|   2>     |   yes   |    no   |    no    |   yes   | overwrite
+|   2>>    |   yes   |    no   |    no    |   yes   |  append
+|   &>     |    no   |    no   |   yes    |   yes   | overwrite
+|   &>>    |    no   |    no   |   yes    |   yes   |  append
+|   tee    |   yes   |   yes   |   yes    |    no   | overwrite
+|   tee -a |   yes   |   yes   |   yes    |    no   |  append
+| n.e. (*) |   yes   |   yes   |    no    |   yes   | overwrite
+| n.e. (*) |   yes   |   yes   |    no    |   yes   |  append
+|& tee     |   yes   |   yes   |   yes    |   yes   | overwrite
+|& tee -a  |   yes   |   yes   |   yes    |   yes   |  append
 
-![pipe example](../assets/img/pipes-02.png)
+![pipe example](pipes.png)
