fix: more post cleanup

--- a/src/posts/pipes/2018-02-22-pipes.md
+++ b/src/posts/pipes/2018-02-22-pipes.md
@@ -22,4 +22,4 @@ This table will hopefully help me keep the pipe madness in check. Am I overwriti
 |& tee     |   yes   |   yes   |   yes    |   yes   | overwrite
 |& tee -a  |   yes   |   yes   |   yes    |   yes   |  append
 
-![pipe example](pipes.png)
+![pipe example]({{ 'pipes.png' | media(page) }})
