--- a/src/posts/.bashrc-aliases/2018-02-22-.bashrc-aliases.md
+++ b/src/posts/.bashrc-aliases/2018-02-22-.bashrc-aliases.md
@@ -9,7 +9,7 @@ Hi All,
 So I’m contemplating putting up my dotfiles to github like many others, but mine really aren’t that complex, unmanageable, or interesting yet imo.
 So first of all, here’s my bash prompt (PS1):
 
-![Bash](bash.png)
+![Bash]({{ 'bash.jpg' | media(page) }})
 
 ```bash
 PS1="\n\[\e[30;1m\]\[\016\]$\[\017\](\[\e[34;1m\]\u@\h\[\e[30;1m\])-(\[\e[37;1m\]\w\[\e[30;1m\])-(\[\e[34;1m\]\@ \d\[\e[30;1m\])->\[\e[30;1m\]\n\[\016\]$\[\017\](\[\e[37;1m\]jobs:\j\[\e[30;1m\])-(\[\e[32;1m\]\$(/bin/ls -1 | /usr/bin/wc -l | /bin/sed 's: ::g') files, \$(/bin/ls -lah | /bin/grep -m 1 total | /bin/sed 's/total //')b\[\e[30;1m\])-> \[\e[0m\]"
