fix: DoH post update

--- a/src/posts/doh/2019-09-27-doh.md
+++ b/src/posts/doh/2019-09-27-doh.md
@@ -40,3 +40,9 @@ You can find the server landing page at [`dns.ndo.dev`](https://dns.ndo.dev)
 
 If you have a DoH client of your own and want to try it out, set your server address to: `https://dns.ndo.dev/dns-query` 
 
+You can test it out for yourself via curl, like such: 
+
+```bash
+curl -s "https://dns.ndo.dev/dns-query?name=google.com&type=A" | python -m json.tool
+```
+
