fix: added pictures to DoH post

--- a/src/posts/doh/2019-09-27-doh.md
+++ b/src/posts/doh/2019-09-27-doh.md
@@ -46,3 +46,20 @@ You can test it out for yourself via curl, like such:
 curl -s "https://dns.ndo.dev/dns-query?name=google.com&type=A" | python -m json.tool
 ```
 
+#### Benchmarks
+
+> Using `bulldohzer` which you can find [here](https://github.com/commonshost/bulldohzer) 
+
+Using cloudflares DNS @ 1.1.1.1
+
+![cloudflare screenshot](doh_cloudflare.png) 
+
+Using my own construction 
+
+![dns.ndo.dev screenshot](doh_ndo.png) 
+
+As you can see theres not a huge difference! 
+
+The server mentioned above currently only has 10mbit/s down and 2mbit/s up connection, so as I organize some faster speeds in the future this will hopefully improve. 
+
+My server is also located in the same city as where I am testing from though.  Although to be honest, I'm sure Cloudflare has ~~an~~ many edge nodes in Frankfurt too. 
