fix: updated markdown css

--- a/src/posts/doh/2019-09-27-doh.md
+++ b/src/posts/doh/2019-09-27-doh.md
@@ -30,7 +30,7 @@ It seems the world is moving towards DoH as the solution for private, ssl encryp
 
 I found this fantastic tutorial by Ben Tasker using [`github.com/m13253/dns-over-https`](https://github.com/m13253/dns-over-https) and [`Unbound`](https://nlnetlabs.nl/projects/unbound/about/) together. 
 
-> Source: https://www.bentasker.co.uk/documentation/linux/407-building-and-running-your-own-dns-over-https-server
+> Source: [bentasker.co.uk](https://www.bentasker.co.uk/documentation/linux/407-building-and-running-your-own-dns-over-https-server)
 
 Not only am I able to control my own DNS Resolver for all my devices now, at home or on the road. But I'm also able to control things such as ad-blocking ;) 
 
@@ -52,11 +52,11 @@ curl -s "https://dns.ndo.dev/dns-query?name=google.com&type=A" | python -m json.
 
 Using cloudflares DNS @ 1.1.1.1
 
-![cloudflare screenshot](doh_cloudflare.png) 
+![cloudflare screenshot]({{ 'doh_cloudflare.png' | media(page) }})
 
 Using my own construction 
 
-![dns.ndo.dev screenshot](doh_ndo.png) 
+![dns.ndo.dev screenshot]({{ 'doh_ndo.png' | media(page) }})
 
 As you can see theres not a huge difference! 
 
