fix: updated doh post

--- a/src/posts/doh/2019-09-27-doh.md
+++ b/src/posts/doh/2019-09-27-doh.md
@@ -12,15 +12,11 @@ Some background: I've had a Raspberry Pi running [`pi-hole`](https://pi-hole.net
 
 I wanted to have this same privacy, performance, and control outside of the house as well. 
 
-
-
 ### New Server
 
 I recently scraped together some parts and continued to build out my "homelab" setup. This most recent addition consisted of a 1U Supermicro Chassis housing an Intel X3480 @ 3 Ghz, 16gb of RAM, and 3TB of storage. Not a monster, but enough to do some plex streaming and hosting the odd web service. 
 
-I was lucky enough that my employer has some rack space to offer me, so I was able to house it there and even get a public IP!
-
-
+I was lucky enough that my employer has some rack space I could use, so I was able to install it there and I even got a public IP!
 
 # dns-over-https + unbound
 
@@ -30,7 +26,36 @@ It seems the world is moving towards DoH as the solution for private, ssl encryp
 
 I found this fantastic tutorial by Ben Tasker using [`github.com/m13253/dns-over-https`](https://github.com/m13253/dns-over-https) and [`Unbound`](https://nlnetlabs.nl/projects/unbound/about/) together. 
 
-> Source: [bentasker.co.uk](https://www.bentasker.co.uk/documentation/linux/407-building-and-running-your-own-dns-over-https-server)
+Due to the fact that I am running Proxmox at the public IP, I had to find a way to forward all this traffic to a VM and send the responses back out. Although it was a bit more complicated than running everything on one public facing server, it wasn't too much overhead. 
+
+In general, the architecture looks like this: 
+
+```
+
+                                                        +-------------------------+
+                                                        |          DNS VM         |
+                                                        +-------------------------+
+
+                                                        +-------------------------+
++--------------+                                        |  Unbound (DNS Resolver) |
+| PROXMOX HOST |																				|   127.0.0.1:5083        |
++-------+------+                                        +-----------+-------------+
+                                                                     |
+                                                         +-----------+------------+
++-------+-------+      																	 |        localhost       |
+|      NGINX    |                                        |      8083 -> 5083      |
+| listening 443 |                                        +-----------+------------+
++-------+-------+                                                    |
+        |         +-----------------------------------+  +-----------+--------------+
++-------+------+  |       Internal Proxmox Network    |  |   dns-over-https server  |
+|  dns.ndo.dev +--+ 127.0.0.1:443 -> 192.168.1.2:8083 +--+    listening on 8083     |
++--------------+  +-----------------------------------+  +--------------------------+
+```
+
+
+`m13253`'s DNS server allows you to submit HTTPS DNS queries to the path `/dns-query`.
+
+Source: [bentasker.co.uk](https://www.bentasker.co.uk/documentation/linux/407-building-and-running-your-own-dns-over-https-server)
 
 Not only am I able to control my own DNS Resolver for all my devices now, at home or on the road. But I'm also able to control things such as ad-blocking ;) 
 
@@ -48,13 +73,13 @@ curl -s "https://dns.ndo.dev/dns-query?name=google.com&type=A" | python -m json.
 
 #### Benchmarks
 
-> Using `bulldohzer` which you can find [here](https://github.com/commonshost/bulldohzer) 
+These benchmarks were run Using `bulldohzer`. A general DNS Benchmarking tool, which support standard DNS, DNS-over-HTTPS, and DNS-over-TLS. You can find it [here](https://github.com/commonshost/bulldohzer).
 
-Using cloudflares DNS @ 1.1.1.1
+Using `cloudflare` @ 1.1.1.1
 
 ![cloudflare screenshot]({{ 'doh_cloudflare.png' | media(page) }})
 
-Using my own construction 
+Using `dns.ndo.dev`
 
 ![dns.ndo.dev screenshot]({{ 'doh_ndo.png' | media(page) }})
 
