fix: updated DoH post

--- a/src/posts/doh/2019-09-27-doh.md
+++ b/src/posts/doh/2019-09-27-doh.md
@@ -12,25 +12,23 @@ Some background: I've had a Raspberry Pi running [`pi-hole`](https://pi-hole.net
 
 I wanted to have this same privacy, performance, and control outside of the house as well. 
 
-### New Server
+# Server
 
 I recently scraped together some parts and continued to build out my "homelab" setup. This most recent addition consisted of a 1U Supermicro Chassis housing an Intel X3480 @ 3 Ghz, 16gb of RAM, and 3TB of storage. Not a monster, but enough to do some plex streaming and hosting the odd web service. 
 
 I was lucky enough that my employer has some rack space I could use, so I was able to install it there and I even got a public IP!
 
-# dns-over-https + unbound
+## DoH + unbound
 
-Anyway, back to the main story - DoH. 
+On to the software!
 
-It seems the world is moving towards DoH as the solution for private, ssl encrypted DNS and I wanted in! 
+It seems the world is quickly moving towards DoH as the standard solution for private, secure DNS and I wanted in! Being the self-hosting nerd that I am, of course I wanted to run my own server.. A few google searches later I found this fantastic tutorial by Ben Tasker using [`github.com/m13253/dns-over-https`](https://github.com/m13253/dns-over-https) and [`Unbound`](https://nlnetlabs.nl/projects/unbound/about/) together. 
 
-I found this fantastic tutorial by Ben Tasker using [`github.com/m13253/dns-over-https`](https://github.com/m13253/dns-over-https) and [`Unbound`](https://nlnetlabs.nl/projects/unbound/about/) together. 
+I only have access to one public IP, and this is being used by the host, Proxmox, so I had to first setup the internal networking so that all the traffic to the VM's can get there and back out to the internet. Although it was a bit more complicated than running everything on one public facing server, it wasn't too much overhead.
 
-Due to the fact that I am running Proxmox at the public IP, I had to find a way to forward all this traffic to a VM and send the responses back out. Although it was a bit more complicated than running everything on one public facing server, it wasn't too much overhead. 
+In general, the architecture ended up looking like this: 
 
-In general, the architecture looks like this: 
-
-```
+```bash
 
                                                         +-------------------------+
                                                         |          DNS VM         |
@@ -38,12 +36,12 @@ In general, the architecture looks like this:
 
                                                         +-------------------------+
 +--------------+                                        |  Unbound (DNS Resolver) |
-| PROXMOX HOST |																				|   127.0.0.1:5083        |
-+-------+------+                                        +-----------+-------------+
+| PROXMOX HOST |																				|      127.0.0.1:5083     |
++-------+------+                                        +------------+------------+
                                                                      |
                                                          +-----------+------------+
 +-------+-------+      																	 |        localhost       |
-|      NGINX    |                                        |      8083 -> 5083      |
+|     NGINX     |                                        |      8083 -> 5083      |
 | listening 443 |                                        +-----------+------------+
 +-------+-------+                                                    |
         |         +-----------------------------------+  +-----------+--------------+
@@ -52,18 +50,55 @@ In general, the architecture looks like this:
 +--------------+  +-----------------------------------+  +--------------------------+
 ```
 
+nginx is running on the Proxmox host listening on ports 80 and 443, so when one visits the HTTPS URL at the path `/dns-query` nginx on the proxmox host first terminates the SSL connection and then proxies the request downstream to the VM. The VM is doing the actual work, running the `dns-over-https` server as well as unbound, a classic DNS server.
 
-`m13253`'s DNS server allows you to submit HTTPS DNS queries to the path `/dns-query`.
+The request first goes to the DoH server which translates the request to an ordinary DNS request. This gets passed onto unbound which resolves it and passes it back up the chain and out the client who made the original request!
 
-Source: [bentasker.co.uk](https://www.bentasker.co.uk/documentation/linux/407-building-and-running-your-own-dns-over-https-server)
+**BONUS**: You can give unbound a list of domains which it should resolve to "127.0.0.1", effectively blocking it. This is the basis for DNS based adblocking, and I've set it up here as well!
 
-Not only am I able to control my own DNS Resolver for all my devices now, at home or on the road. But I'm also able to control things such as ad-blocking ;) 
+🙏 Aforementioned tutorial: [bentasker.co.uk](https://www.bentasker.co.uk/documentation/linux/407-building-and-running-your-own-dns-over-https-server)
+
+Not only am I able to control my own DNS resolver for all my devices now, at home and on the road. But I'm also able to offer some goodies such as adblocking ;) 
+
+## Client
+
+
+#### 🦊 Firefox
+
+If you only want to test it inside a browser then Firefox has you covered with an `about:config` flag. Search for `trr` and change the following settings:
+
+```
+trr.bootstrapAddress:(empty)
+trr.mode: 3
+trr.uri: https://dns.ndo.dev/dns-query
+```
+
+More Info: [internetsociety.org](https://www.internetsociety.org/blog/2018/12/dns-privacy-support-in-mozilla-firefox/)
+
+#### 💾 Chrome
+
+On Chrome 78+ you can check out `chrome://flags/#dns-over-https`. As of this writing (27.09.2019) Google was only activating this option on a small subsection of users on all platforms other than Linux and iOS. Also clients using Enterprise managed Chrome instances will not have access to this _yet_. 
+
+More Info: [chromium.org](https://www.chromium.org/developers/dns-over-https)
+
+#### 💻 OS
+
+To use DNS over HTTPS on an OS level, you will have to install a client, such as the one included with the server software I used above which you can find it here: [github.com/m13253/dns-over-https](https://github.com/m13253/dns-over-https). 
+
+After installing the client service, open up `/etc/dns-over-https/doh-client.conf` in your favorite text editor and add another upstream resolver like such: 
+
+```
+[[upstream.upstream_ietf]]
+  url = "https://dns.ndo.dev/dns-query"
+  weight = 50
+```
+
+Then change your OS network settings and point your DNS server to one of the IP / Port combinations on which this client is listening, found at the top of the config file. By default those are `127.0.0.1:53` and `127.0.0.1:5380`.
+
 
 ### Result
 
-You can find the server landing page at [`dns.ndo.dev`](https://dns.ndo.dev)
-
-If you have a DoH client of your own and want to try it out, set your server address to: `https://dns.ndo.dev/dns-query` 
+Of course I also couldn't pass up the opportunity to setup a little landing page for this service. So if you visit the root path ("/") at my dns domain, you will be greeted by a nice looking landing page, which you can find at [`dns.ndo.dev`](https://dns.ndo.dev)
 
 You can test it out for yourself via curl, like such: 
 
@@ -71,20 +106,16 @@ You can test it out for yourself via curl, like such:
 curl -s "https://dns.ndo.dev/dns-query?name=google.com&type=A" | python -m json.tool
 ```
 
-#### Benchmarks
+### Benchmarks
 
-These benchmarks were run Using `bulldohzer`. A general DNS Benchmarking tool, which support standard DNS, DNS-over-HTTPS, and DNS-over-TLS. You can find it [here](https://github.com/commonshost/bulldohzer).
+These benchmarks were run Using `bulldohzer`. A general purpose DNS Benchmarking tool which supports standard DNS, DNS-over-HTTPS, and DNS-over-TLS. You can find it [here](https://github.com/commonshost/bulldohzer).
 
-Using `cloudflare` @ 1.1.1.1
+#### Using `cloudflare` 
 
 ![cloudflare screenshot]({{ 'doh_cloudflare.png' | media(page) }})
 
-Using `dns.ndo.dev`
+#### Using `dns.ndo.dev`
 
 ![dns.ndo.dev screenshot]({{ 'doh_ndo.png' | media(page) }})
 
-As you can see theres not a huge difference! 
-
-The server mentioned above currently only has 10mbit/s down and 2mbit/s up connection, so as I organize some faster speeds in the future this will hopefully improve. 
-
-My server is also located in the same city as where I am testing from though.  Although to be honest, I'm sure Cloudflare has ~~an~~ many edge nodes in Frankfurt too. 
+The server where this is currently running only has a 10mbit/s down and 2mbit/s up connection, so as I (hopefully) get a faster connection in the future this will  improve as well. My server is also located in the same city as where I conducted this testing from. Although to be honest, I'm sure Cloudflare has ~~an~~ many edge nodes in Frankfurt too. 
