--- a/src/posts/doh/2019-09-27-doh.md
+++ b/src/posts/doh/2019-09-27-doh.md
@@ -8,7 +8,19 @@ demo: "https://github.com/ndom91/dns.ndo.dev"
 
 With all the hype surrounding DNS-over-HTTPS (DoH), I wanted to try it out for myself and see what it was all about. 
 
-Some background: I've had a Raspberry Pi running [`pi-hole`](https://pi-hole.net) in my basement for the past year or so, and that did a pretty good job of blocking ads and keeping my DNS queries private, but only inside the home.. 
+#### TL;DR 
+
+I've setup another public DoH Server with the following conditions:
+
+- No Logging
+- Not a forwarder, performs its own DNS resolution
+- Ad Blocking Enabled
+- ECS Support
+- QNAME Minimization
+- TLS 1.3
+- Unbound with DNSSEC
+
+Anyway, some background on what led me here.. I've had a Raspberry Pi running [`pi-hole`](https://pi-hole.net) in my basement for the past year or so, and that did a pretty good job of blocking ads and keeping my DNS queries private, but only inside the home.. 
 
 I wanted to have this same privacy, performance, and control outside of the house as well. 
 
@@ -54,14 +66,13 @@ nginx is running on the Proxmox host listening on ports 80 and 443, so when one 
 
 The request first goes to the DoH server which translates the request to an ordinary DNS request. This gets passed onto unbound which resolves it and passes it back up the chain and out the client who made the original request!
 
-**BONUS**: You can give unbound a list of domains which it should resolve to "127.0.0.1", effectively blocking it. This is the basis for DNS based adblocking, and I've set it up here as well!
-
 🙏 Aforementioned tutorial: [bentasker.co.uk](https://www.bentasker.co.uk/documentation/linux/407-building-and-running-your-own-dns-over-https-server)
 
-Not only am I able to control my own DNS resolver for all my devices now, at home and on the road. But I'm also able to offer some goodies such as adblocking ;) 
+Not only am I able to control my own DNS resolver for all my devices now, at home and on the road. 
+
+#### I am reasonably commited to maintaining this public resolver unless the cost of maintenance becomes too high or people begin abusing it. 
 
 ## Client
-
 
 #### 🦊 Firefox
 
@@ -119,3 +130,4 @@ These benchmarks were run Using `bulldohzer`. A general purpose DNS Benchmarking
 ![dns.ndo.dev screenshot]({{ 'doh_ndo.png' | media(page) }})
 
 The server where this is currently running only has a 10mbit/s down and 2mbit/s up connection, so as I (hopefully) get a faster connection in the future this will  improve as well. My server is also located in the same city as where I conducted this testing from. Although to be honest, I'm sure Cloudflare has ~~an~~ many edge nodes in Frankfurt too. 
+
