--- a/src/posts/doh/2019-09-27-doh.md
+++ b/src/posts/doh/2019-09-27-doh.md
@@ -1,10 +1,10 @@
 ---
-title:  "Personal DoH Server"
+title:  "Another DoH Server"
 tags: ["web", "linux", "dns"]
 demo: "https://github.com/ndom91/dns.ndo.dev"
 ---
 
-# DNS-over-HTTPS
+# dns.ndo.dev
 
 With all the hype surrounding DNS-over-HTTPS (DoH), I wanted to try it out for myself and see what it was all about. 
 
@@ -15,10 +15,12 @@ I've setup another public DoH Server with the following conditions:
 - No Logging
 - Not a forwarder, performs its own DNS resolution
 - Ad Blocking Enabled
-- ECS Support
+- No ECS
 - QNAME Minimization
 - TLS 1.3
 - Unbound with DNSSEC
+
+#### https://dns.ndo.dev/dns-query
 
 Anyway, some background on what led me here.. I've had a Raspberry Pi running [`pi-hole`](https://pi-hole.net) in my basement for the past year or so, and that did a pretty good job of blocking ads and keeping my DNS queries private, but only inside the home.. 
 
