--- a/src/posts/doh/2019-09-27-doh.md
+++ b/src/posts/doh/2019-09-27-doh.md
@@ -17,7 +17,7 @@ I've setup another public DoH Server with the following conditions:
 - Ad Blocking Enabled
 - No ECS
 - QNAME Minimization
-- TLS 1.3
+- HTTPS w/ TLS 1.3
 - Unbound with DNSSEC
 
 #### https://dns.ndo.dev/dns-query
@@ -30,7 +30,7 @@ I wanted to have this same privacy, performance, and control outside of the hous
 
 I recently scraped together some parts and continued to build out my "homelab" setup. This most recent addition consisted of a 1U Supermicro Chassis housing an Intel X3480 @ 3 Ghz, 16gb of RAM, and 3TB of storage. Not a monster, but enough to do some plex streaming and hosting the odd web service. 
 
-I was lucky enough that my employer has some rack space I could use, so I was able to install it there and I even got a public IP!
+I was lucky enough that my employer has some rack space I could use, so I was able to install it there with a public IP on the host (Proxmox).
 
 ## DoH + unbound
 
@@ -64,13 +64,11 @@ In general, the architecture ended up looking like this:
 +--------------+  +-----------------------------------+  +--------------------------+
 ```
 
-nginx is running on the Proxmox host listening on ports 80 and 443, so when one visits the HTTPS URL at the path `/dns-query` nginx on the proxmox host first terminates the SSL connection and then proxies the request downstream to the VM. The VM is doing the actual work, running the `dns-over-https` server as well as unbound, a classic DNS server.
+nginx is running on the Proxmox host listening on ports 80 and 443, so when one visits the HTTPS URL at the path `/dns-query` nginx on the proxmox host first terminates the SSL connection and then proxies the request downstream to the VM. The VM is doing the actual work, running the `dns-over-https` server software as well as unbound, a classic DNS server.
 
 The request first goes to the DoH server which translates the request to an ordinary DNS request. This gets passed onto unbound which resolves it and passes it back up the chain and out the client who made the original request!
 
 🙏 Aforementioned tutorial: [bentasker.co.uk](https://www.bentasker.co.uk/documentation/linux/407-building-and-running-your-own-dns-over-https-server)
-
-Not only am I able to control my own DNS resolver for all my devices now, at home and on the road. 
 
 #### I am reasonably commited to maintaining this public resolver unless the cost of maintenance becomes too high or people begin abusing it. 
 
